# AI-Web-Scanner

./: .gitignore  LICENSE  README.md  Weekly_Documents.md  pyproject.toml  requirements.txt
Docker/dvwa/: docker-compose.yml
Playground/: GPT_Playground_Results.md  GetInfoBackup.py  HelloAPI.py  ai_analysis.py  responses.txt  testInjection.py  testJuice.py  testRequests.py
Playground/Docker/juiceshop/: docker-compose.yml
waspai/: AiFeedback.py  GetInfo.py  ScanManager.py  __init__.py  ai_feedback.py  get_info.py  main.py  optimize_info.py
waspai/scans/: Injection.py  __init__.py
