[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "waspai"
dynamic = ["version"]
dependencies = [
    "python-dotenv>=0.21.0",
    "openai~=1.105.0",
    "requests~=2.32.5",
    "beautifulsoup4~=4.13.5",
    "selenium~=4.24.0",
    "webdriver-manager~=4.0.2",
]
requires-python = ">=3.10"

[project.scripts]
waspai = "waspai.main:main"

[tool.hatch.version]
path = "waspai/__init__.py"
