[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "waspai"
dynamic = ["version"]
description = "A python CLI AI-integrated web scanner that tests websites against the OWASP top 10 vulnerabilities and provides intelligent feedback for imrpovements"
readme = "README.md"
dependencies = [
    "python-dotenv>=0.21.0",
    "openai~=1.105.0",
    "requests~=2.32.5",
    "beautifulsoup4~=4.13.5",
    "selenium~=4.24.0",
    "webdriver-manager~=4.0.2",
]
requires-python = ">=3.10"
authors = [
    {name = "Joseph DiMartino", email = "joseph.dimartino1207@gmail.com"},
    ]
maintainers = [
  { name = "Matthew Lepinski", email = "mlepinski@ut.edu" }
]
license = { file = "LICENSE" }
keywords = [
    "wasp",
    "security",
    "owasp",
    "web-scanner",
    "vulnerability",
    "penetration-testing",
    "ethical-hacking",
    "ai",
    "automation",
]

[project.scripts]
waspai = "waspai.main:main"

[project.urls]
Repository = "https://github.com/JoeyDiMart/AI-Web-Scanner"
Issues = "https://github.com/JoeyDiMart/AI-Web-Scanner/issues"
Documentation = "https://github.com/JoeyDiMart/AI-Web-Scanner/blob/main/Weekly_Documents.md"

[tool.hatch.version]
path = "waspai/__init__.py"
